Bug 415670 - WPA2-PSK networks show "Unknown security type"
Summary: WPA2-PSK networks show "Unknown security type"
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networks widget (other bugs)
Version First Reported In: master
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Jan Grulich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-29 10:49 UTC by nl6720
Modified: 2024-12-23 18:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nl6720 2019-12-29 10:49:13 UTC
SUMMARY
After updating to NetworkManager > 1.22.0, plasma-nm shows "Unknown security type" for WPA2-PSK and WPA/WPA2-PSK (mixed mode) networks.
WEP and WPA-PSK show up fine. I didn't test WPA{,2} Enterprise modes.

STEPS TO REPRODUCE
1. Open plasma-nm applet,
2. Observe a WPA2-PSK network.

OBSERVED RESULT

In the network list, WPA2-PSK networks show "Unknown security type".

EXPECTED RESULT

The networks should show "WPA2-PSK".


SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.17.4
KDE Frameworks Version: 5.65.0
Qt Version: 5.14.0
plasma-nm 5.17.4-1
networkmanager-qt 5.65.0-2
networkmanager 1.22.2-1

ADDITIONAL INFORMATION
https://bugs.archlinux.org/task/64959
https://gitlab.freedesktop.org/NetworkManager/NetworkManager/issues/320
Comment 1 Jan Grulich 2020-01-02 13:38:06 UTC
Git commit c833304eea82fe5914c18f02e69009410dc49b2c by Jan Grulich.
Committed on 02/01/2020 at 13:37.
Pushed by grulich into branch 'master'.

Sync Utils::securityIsValid with NetworkManager

M  +37   -30   src/utils.cpp

https://commits.kde.org/networkmanager-qt/c833304eea82fe5914c18f02e69009410dc49b2c
Comment 2 Ben Cooksley 2024-12-23 18:25:53 UTC
Bulk transfer as requested in T17796