Sync Utils::securityIsValid with NetworkManager

BUG: 415670